Fix portfolio cards on mobile

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -365,6 +365,7 @@ strong::after {
 
 .card {
     background-color: var(--pink-light);
+    max-width: 100%;
     margin-bottom: 3em;
     display: flex;
     flex-direction: column;
@@ -372,7 +373,6 @@ strong::after {
 
 .card-image {
     width: 100%;
-    min-width: 415px;
     max-width: 100%;
     height: 100%;
     object-fit: cover;
@@ -380,6 +380,7 @@ strong::after {
 }
 
 .card-content {
+    min-width: 55%;
     margin: 0 1.5em;
     flex-shrink: 2;
 }
@@ -462,7 +463,7 @@ strong::after {
 }
 
 .action p {
-    font-size: 1rem;
+    font-size: 0.875rem;
     font-weight: 500;
     text-transform: initial;
     line-height: 1.8;
@@ -493,6 +494,7 @@ strong::after {
     }
 
     .action p {
+        font-size: 1rem;
         max-width: 135px;
         margin-bottom: 1.5em;
     }
